<resources>
    <string name="app_name">What\'s for Dinner?</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Choose a Cuisine</string>
    <string name="title_activity_ingredients">Ingredients Checklist</string>
    <string name="title_activity_meal">Meal Options</string>
    <string name="title_activity_recipe">Recipe</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredientsName">Ham 100g, Onion 2, Olive 10, salts 100g, tomato source 500g</string>
    <string name="foodName">Pizza</string>

    <!-- IngredientsActivity & activity_ingredients.xml -->
    <string name="veggies">Vegetables</string>
    <string name="fruit">Fruit</string>
    <string name="meat">Meat</string>
    <string name="dairy">Dairy</string>
    <string name="grains">Grains &amp; Beans</string>



</resources>
