<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="whatsfordinner.comp3717.bcit.ca.whatsfordinner.RecipeActivity">
    <ImageButton
        android:layout_width="120"
        android:layout_height="100"
        android:id="@+id/logoButton"
        android:background="@drawable/logo"
        android:layout_alignPrentTop="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView  android:text="@string/recipe"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:textSize="60dp"
        android:layout_alignBottom="@+id/logoButton"
        android:layout_toRightOf="@+id/logoButton"
        android:layout_toEndOf="@+id/logoButton"
        android:textColor="#99000d" />

    <TextView
        android:text="@string/ingredients"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ingredients"
        android:textSize="40dp"
        android:layout_below="@+id/textView"
        android:textColor="#99000d" />

    <TextView
        android:text="@string/ingredientsName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/ingredientsName"
        android:textSize="20dp"
        android:layout_below="@+id/ingredients" />

    <TextView
        android:text="@string/foodName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/foodName"
        android:textSize="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#99000d" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recipeLinkButton"
        android:layout_below="@+id/ingredientsName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/pizza" />
</RelativeLayout>
