<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="whatsfordinner.comp3717.bcit.ca.whatsfordinner.IngredientsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/veggies_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="#990000">

            <Button
                android:id="@+id/btn_veggies"
                android:text="@string/veggies"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#990000"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:padding="10dp"
                android:onClick="toggleVeggiesList" />


            <ImageButton
                android:id="@+id/arrow_veggies"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#990000"
                android:src="@drawable/ic_keyboard_arrow_up_white_36dp"
                android:onClick="toggleVeggiesList"/>

        </LinearLayout>


        <ListView
            android:id="@+id/veggies_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            >
        </ListView>


        <LinearLayout
            android:id="@+id/meat_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="#990000">

            <Button
                android:id="@+id/btn_meat"
                android:text="@string/meat"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#990000"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:onClick="toggleMeatsList" />

            <ImageButton
                android:id="@+id/arrow_meat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#990000"
                android:src="@drawable/ic_keyboard_arrow_up_white_36dp"
                android:onClick="toggleMeatsList"/>

        </LinearLayout>

        <ListView
            android:id="@+id/meat_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            >
        </ListView>

        <LinearLayout
            android:id="@+id/grains_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="#990000">

            <Button
                android:id="@+id/btn_grains"
                android:text="@string/grains"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#990000"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:onClick="toggleGrainsList"
                />

            <ImageButton
                android:id="@+id/arrow_grains"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#990000"
                android:src="@drawable/ic_keyboard_arrow_down_white_36dp"
                android:onClick="toggleGrainsList"/>

        </LinearLayout>

        <ListView
            android:id="@+id/grains_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            >
        </ListView>



        <LinearLayout
            android:id="@+id/dairy_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="#990000">

            <Button
                android:id="@+id/btn_dairy"
                android:text="@string/dairy"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#990000"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:onClick="toggleDairyList"
                />

            <ImageButton
                android:id="@+id/arrow_dairy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#990000"
                android:src="@drawable/ic_keyboard_arrow_down_white_36dp"
                android:onClick="toggleDairyList"/>

        </LinearLayout>

        <ListView
            android:id="@+id/dairy_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            >
        </ListView>

        <LinearLayout
            android:id="@+id/fruits_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:background="#990000">

            <Button
                android:id="@+id/btn_fruits"
                android:text="@string/fruit"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:background="#990000"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:onClick="toggleFruitsList"
                />

            <ImageButton
                android:id="@+id/arrow_fruits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#990000"
                android:src="@drawable/ic_keyboard_arrow_down_white_36dp"
                android:onClick="toggleFruitsList"/>

        </LinearLayout>

        <ListView
            android:id="@+id/fruits_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="true"
            >
        </ListView>

        <Button
            android:id="@+id/button"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "40dp"
            android:layout_gravity="center_horizontal"
            android:padding = "20dp"
            android:onClick = "loadMealOptions"
            />

    </LinearLayout>

</RelativeLayout>
